# systemsoptimization

./: .gitignore  Makefile  NOTES.md  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  shell.nix
libraries/: __init__.py  algo_one.py  algo_two.py  bid.py  csv_reader.py  polling.py  seed.py  simulated_annealing.py  solution.py  task.py  utils.py
libraries/cli/: cli.py
resources/: tasks.txt  tasks2.txt
resources/figures/: output.csv
resources/test/data/: tasks1.txt  tasks2.txt  tasks3.txt  tasks4.txt  tasks5.txt  test case with separation.csv
tests/: algo_one_test.py  algo_two_test.py  main_test.py  polling_test.py  simulated_annealilng_test.py  solution_test.py
