[tool.poetry]
name = "systemsoptimization"
version = "0.1.0"
description = ""
authors = ["rudolf anton fortes <ruft@demant.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
hypothesis = "^6.56.2"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
